{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "247dd122-8d3b-432a-b726-5e29a743628d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "2988d5ca-c9cd-40fd-ab76-81824758c240",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "14b11606-3219-4375-9b2f-03ce254f20d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03df6354-ff53-4c91-afe8-eb5a1ffecde9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "6721f2c1-fb1d-414e-939e-c215cae29ed0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f7dde0b6-7aa5-45be-9be9-1db3da419b84",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4a31d4f2-ddb0-404a-904b-5fab6f79bfbc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "97dfaad6-fb13-4055-9dab-51dc041f1e1f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ba5944b1-e282-4183-93e3-fe7c80bb882c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aff0f946-646c-413a-8d8e-eb2965bc00bb",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6df228e-0da8-4248-95a4-f5d99feae96b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}